--- a/Pages/SacramentPrograms/Create.cshtml
+++ b/Pages/SacramentPrograms/Create.cshtml
@@ -54,14 +54,20 @@
                 <span asp-validation-for="SacramentProgram.SacramentHymnNum" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SacramentProgram.SpeakerType" class="control-label"></label>
-                <input asp-for="SacramentProgram.SpeakerType" class="form-control" />
-                <span asp-validation-for="SacramentProgram.SpeakerType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SacramentProgram.SpeakerName" class="control-label"></label>
-                <input asp-for="SacramentProgram.SpeakerName" class="form-control" />
-                <span asp-validation-for="SacramentProgram.SpeakerName" class="text-danger"></span>
+                <label asp-for="SacramentProgram.Speakers" class="control-label">Speakers</label>
+                <div id="speakerContainer">
+                    <div class="form-group">
+                        <label asp-for="SacramentProgram.Speakers[0].Name" class="control-label">Name</label>
+                        <input asp-for="SacramentProgram.Speakers[0].Name" class="form-control" />
+                        <span asp-validation-for="SacramentProgram.Speakers[0].Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="SacramentProgram.Speakers[0].SpeakerType" class="control-label">Speaker Type</label>
+                        <input asp-for="SacramentProgram.Speakers[0].SpeakerType" class="form-control" />
+                        <span asp-validation-for="SacramentProgram.Speakers[0].SpeakerType" class="text-danger"></span>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-primary" onclick="addSpeaker()">Add Speaker</button>
             </div>
             <div class="form-group">
                 <label asp-for="SacramentProgram.SpecialMusicalNumber" class="control-label"></label>
@@ -105,5 +111,25 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script>
+        function addSpeaker () {
+            var index = 1;
+            var inputHtml = `
+                <div class="form-group">
+                    <label asp-for="SacramentProgram.Speakers[${index}].Name" class="control-label">Name</label>
+                    <input asp-for="SacramentProgram.Speakers[${index}].Name" class="form-control" />
+                    <span asp-validation-for="SacramentProgram.Speakers[${index}].Name" class="text-danger" ></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SacramentProgram.Speakers[${index}].SpeakerType" class="control-label">Speaker Type</label>
+                    <input asp-for="SacramentProgram.Speakers[${index}].SpeakerType" class="form-control" />
+                    <span asp-validation-for="SacramentProgram.Speakers[${index}].SpeakerType" class="text-danger" ></span>
+                </div>
+             `;
+            $(inputHtml).appendTo("#speakerContainer");
+        }
+    </script>
 }
