--- a/Pages/SacramentPrograms/Details.cshtml
+++ b/Pages/SacramentPrograms/Details.cshtml
@@ -59,18 +59,16 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SpeakerType)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SpeakerType)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SpeakerName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SpeakerName)
-        </dd>
+        <dt class="col-sm-2">Speakers</dt>
+        <div>
+            @for (int i = 0; i < Model.SacramentProgram.Speakers.Count; i++)
+            {
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)
+                    @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)
+                </dd>
+            }
+        </div>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)
         </dt>
