--- a/Pages/SacramentPrograms/Create.cshtml
+++ b/Pages/SacramentPrograms/Create.cshtml
@@ -23,10 +23,20 @@
                 <input asp-for="SacramentProgram.PresidingName" class="form-control" />
                 <span asp-validation-for="SacramentProgram.PresidingName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="SacramentProgram.ConductingName" class="control-label"></label>
                 <input asp-for="SacramentProgram.ConductingName" class="form-control" />
                 <span asp-validation-for="SacramentProgram.ConductingName" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+                <label asp-for="SacramentProgram.ConductingName" class="control-label"></label>
+                <select asp-for="SacramentProgram.ConductingName" class="form-control">
+                    <option value="">-- Select --</option>
+                    <option value="Bishop Bill Black">Bishop Bill Black</option>
+                    <option value="Brother Wayne White">Brother Wayne White</option>
+                    <option value="Brother Bob Brown">Brother Bob Brown</option>
+                    <option value="To Be Determined">To Be Determined</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="SacramentProgram.OpeningPrayerName" class="control-label"></label>
