--- a/Pages/SacramentPrograms/Details.cshtml
+++ b/Pages/SacramentPrograms/Details.cshtml
@@ -7,105 +7,112 @@
 
 <h1>Details</h1>
 
-<div>
-    <h4>SacramentProgram</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ProgramDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ProgramDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.PresidingName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.PresidingName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ConductingName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ConductingName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.OpeningPrayerName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.OpeningPrayerName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.OpeningHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.OpeningHymnNum)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)
-        </dd>
-        <dt class="col-sm-2">Speakers</dt>
-        <div>
+<div class="border rounded bg-white bg-opacity-75 p-4">
+    <div class="row justify-content-center">
+        <div class="col-sm-10 col-md-8 col-lg-6 border border-dark rounded p-4 opacity-90">
+            <div class="text-center">
+                <h4>
+                    Sacrament Program <br />
+                    <span class="fs-5">@Html.DisplayFor(model => model.SacramentProgram.ProgramDate)</span>
+                </h4>
+            </div>
+            <hr />
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.PresidingName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.PresidingName)</div>
+            </div>
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ConductingName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ConductingName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningPrayerName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningPrayerName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningHymnName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.OpeningHymnNum)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.OpeningHymnNum)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.SacramentHymnName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SacramentHymnNum)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.SacramentHymnNum)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].SpeakerType)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.Speakers[0].Name)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.SpecialMusicalNumber)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnNum)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnNum)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingPrayerName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingPrayerName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnName)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingHymnName)</div>
+            </div>
+
+            <div class="d-flex justify-content-between fw-semibold my-3">
+                <div class="pe-1">@Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnNum)</div>
+                <div class="border-b-dashed flex-grow-1"></div>
+                <div class="ps-1">@Html.DisplayFor(model => model.SacramentProgram.ClosingHymnNum)</div>
+            </div>
+            @*             <dl class="row">
+            <dt class="col-sm-2">Speakers</dt>
+            <div>
             @for (int i = 0; i < Model.SacramentProgram.Speakers.Count; i++)
             {
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)
-                    @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)
-                </dd>
+            <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].Name)
+            @Html.DisplayFor(model => model.SacramentProgram.Speakers[i].SpeakerType)
+            </dd>
             }
+            </div>
+            </dl> *@
         </div>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.SpecialMusicalNumber)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.SpecialMusicalNumber)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.IntermediateHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.IntermediateHymnNum)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ClosingPrayerName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ClosingPrayerName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ClosingHymnName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SacramentProgram.ClosingHymnNum)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SacramentProgram.ClosingHymnNum)
-        </dd>
-    </dl>
+    </div>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.SacramentProgram?.Id">Edit</a> |
