--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,6 +17,33 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.background {
+    background-image: url('../img/MassCircles.svg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.opacity-90 {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.fw-semibold {
+    font-weight: 600;
+}
+
+.border-b-dashed {
+    border-bottom-style: dashed;
+    border-bottom-width: 1px;
+    border-bottom-color: #000;
+    margin-bottom: 5px;
 }
